06-mongodb-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-headless
  namespace: mongo-stack
spec:
  clusterIP: None
  selector:
    app: mongodb
  ports:
    - port: 27017
