07-mongodb-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: mongo-stack
spec:
  type: ClusterIP
  selector:
    app: mongodb
  ports:
    - port: 27017
