10-ingress-nginx-lb-service-static-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  loadBalancerIP: <STATIC_IP>   # 👈 Add this line , get  static IP-->az network public-ip create --resource-group <NODE_RESOURCE_GROUP>  --name myStaticPublicIP --sku Standard  --allocation-method static


  selector:
    app.kubernetes.io/component: controller
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
